<resources>
    <string name="app_name">machinetest</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dob">DOB</string>
    <string name="female">female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
</resources>