<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Register.RegisterActivity"
    android:background="@color/blue"
    >
    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                android:layout_margin="@dimen/_20sdp"
                />

            <TextView
                android:id="@+id/tvLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginVertical="@dimen/_50sdp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/_40ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:src="@drawable/portrait_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceRound"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/imgAdd"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/ic_add_circle"
                app:layout_constraintBottom_toBottomOf="@id/imgProfile"
                app:layout_constraintEnd_toEndOf="@+id/imgProfile"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/imgProfile"
                app:layout_constraintTop_toTopOf="@id/imgProfile"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgProfile"
                android:layout_marginVertical="@dimen/_30sdp"
                android:hint="@string/name"
                android:background="@drawable/btn1"
                android:textColorHint="@color/white"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-thin"
                />
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etName"
                android:layout_marginVertical="@dimen/_10sdp"
                android:hint="@string/email"
                android:background="@drawable/btn1"
                android:textColorHint="@color/white"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-thin"
                />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:background="@drawable/btn1"
                android:ems="12"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@id/etEmail">

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/male"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/female"
                    android:textColor="@color/white" />
            </RadioGroup>

            <EditText
                android:id="@+id/etDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgGender"
                android:layout_marginVertical="@dimen/_10sdp"
                android:hint="@string/dob"
                android:background="@drawable/btn1"
                android:textColorHint="@color/white"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:drawableEnd="@drawable/ic_calendar"
                android:cursorVisible="false"
                android:focusable="false"
                android:fontFamily="sans-serif-thin"
                />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etDOB"
                android:layout_marginVertical="@dimen/_10sdp"
                android:hint="@string/password"
                android:background="@drawable/btn1"
                android:textColorHint="@color/white"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-thin"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPassword"
                android:layout_marginVertical="@dimen/_30sdp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:background="@drawable/btn3"
                android:textColorHint="@color/white"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:fontFamily="sans-serif-thin"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>