<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Profile.ProfileActivity"
    android:background="@color/blue"
    >
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/cl1"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           >
           <ImageView
               android:id="@+id/imgBg"
               android:layout_width="match_parent"
               android:layout_height="0dp"
               tools:src="@drawable/ic_back"
               app:layout_constraintDimensionRatio="16:9"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:src="@drawable/bg_big"
               android:scaleType="centerCrop"
               />
        <ImageView
           android:id="@+id/imgMenu"
           android:layout_width="@dimen/_25sdp"
           android:layout_height="@dimen/_25sdp"
           android:src="@drawable/ic_menu"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
           />

           <com.google.android.material.imageview.ShapeableImageView
               android:id="@+id/imgProfile"
               android:layout_width="@dimen/_80sdp"
               android:layout_height="@dimen/_80sdp"
               android:layout_marginVertical="@dimen/_10sdp"
               android:src="@drawable/portrait_placeholder"
               app:layout_constraintBottom_toBottomOf="@+id/imgBg"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.10"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/imgBg"
               android:scaleType="centerCrop"
               app:shapeAppearanceOverlay="@style/ShapeAppearanceRound" />

           <TextView
               android:id="@+id/tvUsername"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:textSize="@dimen/_16ssp"
               app:layout_constraintBottom_toBottomOf="@+id/imgBg"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.10"
               app:layout_constraintStart_toEndOf="@+id/imgProfile"
               tools:text="Username"
               android:fontFamily="sans-serif-thin"
               android:ellipsize="end"
               android:maxLines="1"
               android:layout_marginBottom="@dimen/_10sdp"
               android:textStyle="bold"
               />

           <TextView
               android:id="@+id/tvEmail"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="@dimen/_35sdp"
               android:layout_marginTop="@dimen/_45sdp"
               android:text="@string/email"
               android:textSize="@dimen/_14sdp"
               android:textColor="@color/white"
               android:ellipsize="end"
               android:maxLines="1"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/imgBg" />

           <TextView
               android:id="@+id/tvGender"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="@dimen/_35sdp"
               android:layout_marginTop="@dimen/_10sdp"
               android:text="@string/gender"
               android:textSize="@dimen/_14sdp"
               app:layout_constraintEnd_toEndOf="parent"
               android:textColor="@color/white"
               android:ellipsize="end"
               android:maxLines="1"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/tvEmail" />

           <TextView
               android:id="@+id/tvDOB"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="@dimen/_35sdp"
               android:layout_marginTop="@dimen/_10sdp"
               android:text="@string/dob"
               android:textSize="@dimen/_14sdp"
               android:ellipsize="end"
               android:maxLines="1"
               app:layout_constraintEnd_toEndOf="parent"
               android:textColor="@color/white"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/tvGender" />

           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/btnEdit"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginVertical="@dimen/_30sdp"
               android:layout_marginTop="28dp"
               android:background="@drawable/btn4"
               android:ems="5"
               android:fontFamily="sans-serif-thin"
               android:paddingHorizontal="@dimen/_10sdp"
               android:text="@string/edit"
               android:textAllCaps="false"
               android:textColor="@color/white"
               android:textColorHint="@color/white"
               android:textSize="@dimen/_16ssp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.498"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/tvDOB" />
       </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>